<resources>
    <string name="app_name">lab3</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">email@gmail.com</string>
    <string name="rowdy_meal">Rowdy Meal</string>
    <string name="login_title">Log In</string>
    <string name="howdy_txt">Howdy Roadrunner!!</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="log_in">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signUP">Sign In</string>
    <string name="createAccount">Do not have an account?</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_calorie">Calorie Tracker</string>
    <string name="title_goals">Goals</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_help">Help</string>
    <string-array name="workout_type_items">
        <item>Strength</item>
        <item>Cardio</item>
    </string-array>
    <string-array name="athlete_level_items">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="TimeFrames">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="GoalType">
        <item>Calories</item>
        <item>Weight</item>
        <item>Steps</item>
    </string-array>
    <string-array name="MealType">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string-array name="Times">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>