<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">
    <activity
        android:id="@+id/navigation_notifications"
        android:name="edu.utsa.lab3.NotificationsActivity"
        android:label="@string/title_notifications"
        tools:layout="@layout/activity_notifications" />

    <activity
        android:id="@+id/navigation_calorie"
        android:name="edu.utsa.lab3.CalorieActivity"
        android:label="@string/title_calorie"
        tools:layout="@layout/activity_calorie" />

    <activity
        android:id="@+id/navigation_goals"
        android:name="edu.utsa.lab3.GoalsActivity"
        android:label="@string/title_goals"
        tools:layout="@layout/activity_goals" />
    <activity
        android:id="@+id/navigation_help"
        android:name="edu.utsa.lab3.HelpActivity"
        android:label="@string/title_help"
        tools:layout="@layout/activity_goals" />
</navigation>